--- a/Deber Pagina web/nendoroid.html
+++ b/Deber Pagina web/nendoroid.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<link rel="icon" type="image/png" href="images\gun.png" />
+		<link rel="icon" type="image/png" href="../images\gun.png" />
 		<meta charset="utf-8">
 		<!-- Website Title & Description for Search Engine purposes -->
 		<title>Toychan | Figuras anime y Comic</title>
@@ -10,14 +10,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		
 		<!-- Bootstrap CSS -->
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link href="css/bootstrap-glyphicons.css" rel="stylesheet">
+		<link href="../css/bootstrap.min.css" rel="stylesheet">
+		<link href="../css/bootstrap-glyphicons.css" rel="stylesheet">
 		
 		<!-- Custom CSS -->
-		<link href="css/styles.css" rel="stylesheet">
+		<link href="../css/styles.css" rel="stylesheet">
 		
 		<!-- Include Modernizr in the head, before any other Javascript -->
-		<script src="js/modernizr-2.6.2.min.js"></script>
+		<script src="../js/modernizr-2.6.2.min.js"></script>
 		
 	</head>
 	<body>
@@ -33,7 +33,7 @@
 
 				</button>
 
-	 			<a class="navbar-brand" href="/"><img src="images/logo.png"></a>
+	 			<a class="navbar-brand" href="/"><img src="../images/logo.png"></a>
 	 			<div class="nav-collapse collapse navbar-responsive-collapse">
 	 				<ul class="nav navbar-nav">
 	 					<li>
@@ -45,8 +45,8 @@
 								<li>
 									<a href="#">figma</a>
 								</li>
-   								<li>
-									<a href="#">nendoroid</a>
+   								<li  class="active">
+									<a href="pages/nendoroid.html">nendoroid</a>
 								</li>
 								<li>
 									<a href="#">Revoltech</a>
@@ -70,7 +70,7 @@
 	 					<li><!-- Quienes Somos-->
 	 						<a href="quienes_somos.html">Quienes Somos</a>
 	 					</li><!-- fin del Quienes somos-->
-	 					<li  class="active"><!-- FAQ-->
+	 					<li><!-- FAQ-->
 	 						<a href="faq.html">F.A.Q.</a>
 	 					</li><!-- fin del FAQ-->
 	 					<li><!-- Contactenos-->
@@ -104,16 +104,6 @@
 	 		</div><!--FIN del  container en el NAV -->
 	 	</div><!-- fin del NAV bar superior -->
 	 	
-	 	<div class="row">
-<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-	 	</div>
-
-
 
 	 	<div class="row" id="bigcallout">
 	 		
@@ -127,7 +117,24 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 	 	<div class="row" id="blah">
 
 	 	</div><!-- fin del ROW ROW -->
-	 	<div class="row" id="moreinfo">
+	 	<div class="row" id="morecourses">
+	 		<div class="col-12">
+	 			<h3>Linea Nendoroid GOODSMILE COMPANY</h3>
+	 			<div class="thumbnails row">
+	 				<div class="col-6">
+	 					<div class="thumbnail">
+	 						<img src="images/madoka_yukata.png" alt="Madoka Nendoroid">
+	 						<div class="caption">
+	 							<h3>Nendoroid Madoka Kaname Yukata</h3>
+	 							<p>Hazte con este nendoroid de Kaname Madoka con su Hermoso Yukata</p>
+	 							<p>   <a href="pages/nendoroid/nendo001.html" class="btn btn-primary btn-small" target="_blank"> Comprar</a> <a href="pages/nendoroid/nendo001.html" target="_blank" class="btn btn-small btn-link">Ver mas</a>  </p>
+	 						</div><!-- fin Caption -->
+	 					</div>
+	 				</div>
+	 			</div><!-- fin del thumbnail ROW -->
+
+	 		</div>	
+
 
 	 	</div><!-- fin del ROW ROW -->
 	 </div><!-- End Container -->
