modificacion de nenoroid

--- a/Deber Pagina web/nendoroid.html
+++ b/Deber Pagina web/nendoroid.html
@@ -10,14 +10,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		
 		<!-- Bootstrap CSS -->
-		<link href="../css/bootstrap.min.css" rel="stylesheet">
-		<link href="../css/bootstrap-glyphicons.css" rel="stylesheet">
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/bootstrap-glyphicons.css" rel="stylesheet">
 		
 		<!-- Custom CSS -->
-		<link href="../css/styles.css" rel="stylesheet">
+		<link href="css/styles.css" rel="stylesheet">
 		
 		<!-- Include Modernizr in the head, before any other Javascript -->
-		<script src="../js/modernizr-2.6.2.min.js"></script>
+		<script src="js/modernizr-2.6.2.min.js"></script>
 		
 	</head>
 	<body>
@@ -33,7 +33,7 @@
 
 				</button>
 
-	 			<a class="navbar-brand" href="/"><img src="../images/logo.png"></a>
+	 			<a class="navbar-brand" href="/"><img src="images/logo.png"></a>
 	 			<div class="nav-collapse collapse navbar-responsive-collapse">
 	 				<ul class="nav navbar-nav">
 	 					<li>
